--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -23,11 +23,9 @@ jobs:
         uses: github/codeql-action/init@v3
         with:
           languages: csharp
-
-      - name: Build project (Unity workaround)
-        run: |
-          dotnet --version || true
-          echo "Unity project - no real build executed"
+          build-mode: none
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
+        with:
+          fail-on-error: false
